# engineering-playbook-system

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
CONTRIBUTING/: index.html
contributing/: index.html
demo/: Dockerfile  context.py  logger.py  main.py  requirements.txt
demo/api/: items.py  url_checker.py
demo/schemas/: item.py  url_checker.py
demo/services/: item_service.py  url_checker_service.py
demo/tests/: test_database.py  test_health.py  test_items.py  test_url_checker.py
docs/: CONTRIBUTING.md  how-to-extend.md  index.md
docs/playbook/: 01-standard-workflow.md  02-architecture-and-quality.md  03-observability-and-security.md  04-technical-decisions.md  05-reliability-checklist.md  index.md
docs/stylesheets/: extra.css
how-to-extend/: index.html
playbook/: 02-architecture-and-quality.md  index.html
playbook/01-standard-workflow/: index.html
playbook/02-architecture-and-quality/: index.html
playbook/03-observability-and-security/: index.html
playbook/04-technical-decisions/: index.html
playbook/05-reliability-checklist/: index.html
playbook/adr/: ADR-001-layered-architecture.md  (+1 more)
scripts/: check-secrets.sh  dev-setup.sh
search/: search_index.json
stylesheets/: extra.css
template/: .env.example  requirements.txt
(+16 files in other folders)
