[project]
name = "engineering-playbook-system"
version = "1.0.0"
description = "工程標準系統 — SSOT 平台"
requires-python = ">=3.11"

# ---------------------------------------------------------------------------
# Ruff — Linter & Formatter（取代 flake8 + isort + black）
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long（由 formatter 處理）
]

[tool.ruff.lint.isort]
known-first-party = ["app", "demo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["demo/tests", "template/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
